# gropt-dev

./: .gitignore  README.md  ariel_project_todo.md  build-debug.sh  build-release.sh  mkdocs.yml  pyproject.toml  ruff.toml  setup.py  todo.md
.github/workflows/: build-linux.yml  build-mac copy.yml  build-mac.yml  build-windows.yml  publish.yml
docs/solvers/: osqp_solver.md
examples/diffusion/: diffusion_constraint.ipynb
examples/moments/: flow_encoding.ipynb  nonzero_ends.ipynb
examples/objective_functions/: regularizations.ipynb  self_norm.ipynb
examples/safe_diff/: compare_SAFE.m  diff_safe.mat  flow_safe.mat  matlab_safe_compare.ipynb  multi_constraint.ipynb  safe_diff.ipynb  safe_diff_TV.ipynb  stim_failure.ipynb
gropt_dev/: __init__.py  __init__.pyi  gropt_wrapper.pyi  readasc.py  utils.py
gropt_dev/gropt_wrapper/: c_gropt.pxd  gropt_wrapper.pyx
gropt_dev/src/: CMakeLists.txt  fft_helper.cpp  fft_helper.hpp  gropt_params.cpp  gropt_params.hpp  gropt_utils.cpp  gropt_utils.hpp  ils.cpp  ils.hpp  ils_bicgstabl.cpp  ils_bicgstabl.hpp  ils_cg.cpp  ils_cg.hpp  ils_nlcg.cpp  ils_nlcg.hpp  main.cpp  op_bvalue.cpp  op_bvalue.hpp  op_gradient.cpp  op_gradient.hpp  op_identity.cpp  op_identity.hpp  op_main.cpp  op_main.hpp  op_moment.cpp  op_moment.hpp  op_safe.cpp  op_safe.hpp  op_slew.cpp  op_slew.hpp  op_tv.cpp  op_tv.hpp  solver.cpp  solver.hpp  solver_groptsdmm.cpp  solver_groptsdmm.hpp
